# easy-pdf-rag

./: .env_sample  .gitignore  01-OpenAI-Assistant-V2.ipynb  02-Anthropic-PDF-Parsing.ipynb  README.md  assistant_builder.py  main.py  pyproject.toml  requirements.txt
