[tool.poetry]
name = "easy-pdf-rag"
version = "0.1.0"
description = "Easy PDF RAG module integration with OpenAI and Anthropic"
authors = ["teddy <teddylee777@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-teddynote = "^0.3.20"
jupyter = "^1.1.1"
notebook = "^7.2.2"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
